# python-project-lvl4

./: .gitignore  Procfile  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: linter.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels_dump.json
labels/migrations/: 0001_initial.py
labels/templates/labels/: create_label.html  delete_label.html  label_list.html
locale/en/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses_dump.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: base.html  create_status.html  delete_status.html  statuses_list.html
task_manager/: settings.py  urls.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: dbdump.json
tasks/migrations/: 0001_initial.py  0002_auto_20210714_1750.py  0002_auto_20210909_1716.py  0002_initial.py  0003_auto_20210718_0717.py  0003_auto_20210909_1910.py  0004_auto_20210718_1340.py  0004_delete_label.py  0005_auto_20210718_1352.py
tasks/templates/tasks/: base.html  confirm_delete.html  delete_status.html  delete_user.html  filter_tasks.html  home.html  label_list.html  login.html  main.html  nav.html  register.html  status_list.html  task_details.html  task_list.html  (+2 more)
tasks_manager/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  nav.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users_dump.json
users/migrations/: 0001_initial.py
(+14 files in other folders)
