[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["zavr1k <zavr35rus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
python-dotenv = "^0.17.1"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
